<resources>
    <string name="app_name">My Tinder</string>

    <!-- account -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>



    <string name="Welcome" translatable="false"> Welcome your Tinder 👋 </string>

    <!-- Login -->
    <string name="login_button" translatable="false">Authenticate</string>
    <string name="action_save_credentials" translatable="false">Save credentials</string>

    <string name="error_credentials_empty_loginusername" translatable="false">Your username is empty</string>
    <string name="error_credentials_empty_loginpass" translatable="false">Your password is empty</string>
    <string name="error_credentials_mismatch" translatable="false">Invalid username and/or password</string>

    <string name="login_Username" translatable="false">Your username</string>
    <string name="login_pass" translatable="false">Your password</string>




    <string name="descrição" translatable="false">This application aims to help you find a person to walk with or take your pet to the clipper</string>
    <string name="open_list">Open list</string>


</resources>