<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/ic_icons_background">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_icon" />


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryContrastText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_Username"
        android:textColorHint="@color/colorPrimaryDarkContrastText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark60"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryContrastText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass"
        android:textColorHint="@color/colorPrimaryDarkContrastText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark60"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryContrastText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:textColor="@color/colorSecondaryLight"/>

    <CheckBox
        android:id="@+id/cb_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/action_save_credentials"
        android:textColor="@color/colorPrimaryContrastText"/>

    <Button
        android:id="@+id/btn_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/login_button"
        android:textSize="19sp"
        android:textColor="@color/colorPrimaryContrastText"
        android:textAllCaps="false"/>



</LinearLayout>